--- a/REACT-JS/React-demos/src/index.css
+++ b/REACT-JS/React-demos/src/index.css
@@ -1,4 +1,6 @@
-* {
+/* //++++++++++++++ Styling +++++++++++ */
+
+/* * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -16,4 +18,4 @@ h1{
     border: 2px solid black;
     padding: 20px;
     font-family: sans-serif;
-}
+} */
