Create testimonials Project

--- a/REACT-JS/React-Projects/Project-primary-1/src/Components-Testimonials-7/Style.css
+++ b/REACT-JS/React-Projects/Project-primary-1/src/Components-Testimonials-7/Style.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -58,4 +58,4 @@ body {
 
 .testimonials-nav button:active {
   transform: scale(0.95);
-}
+} */
