--- a/REACT-JS/React-Projects/Project-primary-2/Ecom-Soting/src/Products/Products.css
+++ b/REACT-JS/React-Projects/Project-primary-2/Ecom-Soting/src/Products/Products.css
@@ -4,11 +4,11 @@
     margin-left: 20rem;
     margin-top: 2rem;
     z-index: -2;
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 .card{
     margin: 20px;
-    border: 2px solid red;
+    /* border: 2px solid ; */
     padding: 20px;
     cursor: pointer;
 }
